# artificial_intelligence

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.sh
header/: Root.hpp
src/: main.cpp
